[package]
name = "srv"
version = "0.5.1"
edition = "2024"

[dependencies]
httparse = "1"

[dev-dependencies]
tempfile = "3"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

